--- a/core/pom.xml
+++ b/core/pom.xml
@@ -11,5 +11,12 @@
 
   <artifactId>cache-core</artifactId>
 
+  <dependencies>
+    <dependency>
+      <groupId>javax.cache</groupId>
+      <artifactId>cache-api</artifactId>
+      <version>${javax.cache.version}</version>
+    </dependency>
+  </dependencies>
 
 </project>
