--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     <assertj.core.version>3.6.2</assertj.core.version>
     <awaitility.version>2.0.0</awaitility.version>
     <guava.version>26.0-jre</guava.version>
+    <javax.cache.version>1.1.1</javax.cache.version>
     <cache.release.version>0.0.1</cache.release.version>
   </properties>
 
