--- a/permanent/pom.xml
+++ b/permanent/pom.xml
@@ -9,6 +9,15 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>cache-core</artifactId>
+  <artifactId>permanent-cache</artifactId>
 
+
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>${junit.version}</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
 </project>
